--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -7,7 +7,7 @@
     background: white url('../images/landing/about-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi) {
+    (min-resolution: 192dpi), (min-width: 1440px) {
       background: white url('../images/landing/about-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
@@ -19,7 +19,7 @@
     background: white url('../images/landing/villas-landing-desktop.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi) {
+    (min-resolution: 192dpi), (min-width: 1440px) {
       background: white url('../images/landing/villas-landing-desktop@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
@@ -31,7 +31,7 @@
     background: white url('../images/landing/services-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi) {
+    (min-resolution: 192dpi), (min-width: 1440px) {
       background: white url('../images/landing/services-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
@@ -43,7 +43,7 @@
     background: white url('../images/landing/special-occasions-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi) {
+    (min-resolution: 192dpi), (min-width: 1440px) {
       background: white url('../images/landing/special-occasions-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
@@ -55,7 +55,7 @@
     background: white url('../images/landing/news-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi) {
+    (min-resolution: 192dpi), (min-width: 1440px) {
       background: white url('../images/landing/news-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
