fix header hover logic

--- a/app/assets/sass/_modules/_header-footer.scss
+++ b/app/assets/sass/_modules/_header-footer.scss
@@ -34,10 +34,13 @@ header {
           @include font(1.4, 1.4);
           color:white;
           text-decoration: none;
+          @include transition(opacity 0.25s ease-in-out);
         }
-        &:last-child {
-          margin-right: 0;
-          opacity: .6;
+        &:hover {
+          a {
+            opacity: .6;
+            @include transition(opacity 0.25s ease-in-out);
+          }
         }
       }
     }
