--- a/app/assets/sass/_pages/_villas.scss
+++ b/app/assets/sass/_pages/_villas.scss
@@ -7,6 +7,7 @@
       top:11.1rem;
       position: fixed;
       @include transform(translateZ(0));
+      box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
     }
     .half {
       width: 50%;
