--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2383,6 +2383,7 @@ body.press .landing {
     top: 11.1rem;
     position: fixed;
     transform: translateZ(0);
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   }
 }
 #content.villas.feed .landing .half {
