update Services content + minor design fix

--- a/app/assets/sass/_pages/_services.scss
+++ b/app/assets/sass/_pages/_services.scss
@@ -12,6 +12,9 @@
         @include media($mobile) {
           padding: 5rem;
         }
+        h3 {
+          margin-bottom: 7rem;
+        }
       }
       .infos, .image {
         @include media($desktop) {
