--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2238,6 +2238,9 @@ body.press .landing {
     padding: 5rem;
   }
 }
+#content.services .main article .infos h3 {
+  margin-bottom: 7rem;
+}
 @media screen and (min-width: 480px) {
   #content.services .main article .infos, #content.services .main article .image {
     float: left;
