--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -4,63 +4,68 @@
   z-index: 5;
   overflow: hidden;
   body.about & {
-    background: white url('../images/landing/about-landing.jpg') no-repeat center center fixed;
+    background: url('../images/landing/about-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi), (min-width: 1440px) {
-      background: white url('../images/landing/about-landing@2x.jpg') no-repeat center center fixed;
+      background: url('../images/landing/about-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     @include media($mobile) {
-      background: white url('../images/landing/about-landing-mobile.jpg') no-repeat center center fixed;
+      background: url('../images/landing/about-landing-mobile.jpg') no-repeat center top;
+      background-size: cover;
     }
   }
   body.villas & {
-    background: white url('../images/landing/villas-landing-desktop.jpg') no-repeat center center fixed;
+    background: url('../images/landing/villas-landing-desktop.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi), (min-width: 1440px) {
-      background: white url('../images/landing/villas-landing-desktop@2x.jpg') no-repeat center center fixed;
+      background: url('../images/landing/villas-landing-desktop@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     @include media($mobile) {
-      background: white url('../images/landing/villas-landing-mobile.jpg') no-repeat center center fixed;
+      background: url('../images/landing/villas-landing-mobile.jpg') no-repeat center top;
+      background-size: cover;
     }
   }
   body.services & {
-    background: white url('../images/landing/services-landing.jpg') no-repeat center center fixed;
+    background: url('../images/landing/services-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi), (min-width: 1440px) {
-      background: white url('../images/landing/services-landing@2x.jpg') no-repeat center center fixed;
+      background: url('../images/landing/services-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     @include media($mobile) {
-      background: white url('../images/landing/services-landing-mobile.jpg') no-repeat center center fixed;
+      background: url('../images/landing/services-landing-mobile.jpg') no-repeat center top;
+      background-size: cover;
     }
   }
   body.special-occasions & {
-    background: white url('../images/landing/special-occasions-landing.jpg') no-repeat center center fixed;
+    background: url('../images/landing/special-occasions-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi), (min-width: 1440px) {
-      background: white url('../images/landing/special-occasions-landing@2x.jpg') no-repeat center center fixed;
+      background: url('../images/landing/special-occasions-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     @include media($mobile) {
-      background: white url('../images/landing/special-occasions-landing-mobile.jpg') no-repeat center center fixed;
+      background: url('../images/landing/special-occasions-landing-mobile.jpg') no-repeat center top;
+      background-size: cover;
     }
   }
   body.press & {
-    background: white url('../images/landing/news-landing.jpg') no-repeat center center fixed;
+    background: url('../images/landing/news-landing.jpg') no-repeat center center fixed;
     background-size: cover;
     @media (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi), (min-width: 1440px) {
-      background: white url('../images/landing/news-landing@2x.jpg') no-repeat center center fixed;
+      background: url('../images/landing/news-landing@2x.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     @include media($mobile) {
-      background: white url('../images/landing/news-landing-mobile.jpg') no-repeat center center fixed;
+      background: url('../images/landing/news-landing-mobile.jpg') no-repeat center top;
+      background-size: cover;
     }
   }
 
@@ -103,7 +108,7 @@
     bottom:0;
     z-index: 9;
     @include media($mobile) {
-      @include transform(translateZ(0));
+      display: none;
     }
   }
 }
