--- a/app/assets/sass/_modules/_header-footer.scss
+++ b/app/assets/sass/_modules/_header-footer.scss
@@ -25,6 +25,8 @@ header {
     ul {
       list-style: none;
       padding: 0; margin: 0;
+      display: flex;
+      flex-flow: row nowrap;
       li {
         display: inline-block;
         margin-right: 4rem;
@@ -35,6 +37,9 @@ header {
           color:white;
           text-decoration: none;
           @include transition(opacity 0.25s ease-in-out);
+        }
+        &:last-child {
+          margin-right: 0;
         }
         &:hover {
           a {
@@ -55,7 +60,21 @@ header {
     a.logo{color: $dark;}
     nav a {color: $dark;}
   }
-  &.hide-desktop {
+  &.desktop {
+    display: none;
+    opacity: 0;
+    @include media(min-width 900px) {
+      display: block;
+      opacity: 1;
+    }
+  }
+  &.mobile {
+    display: none;
+    opacity: 0;
+    @include media(max-width 900px) {
+      display: block;
+      opacity: 1;
+    }
     position: fixed;
     top:0;
     z-index: 9999;
@@ -86,7 +105,7 @@ header {
     nav a {color: $dark;}
   }
 }
-.hide-desktop.menu {
+.mobile.menu {
   position: fixed;
   width: 100vw;
   height: calc(100% - 11.1rem);
