--- a/app/assets/sass/_pages/_home.scss
+++ b/app/assets/sass/_pages/_home.scss
@@ -16,15 +16,8 @@
       overflow: hidden;
       z-index: -1;
       img {
-        // width: auto;
         min-width: 0 !important;
-        // max-width: 200% !important;
         min-height: 100vh;
-        // @include media($mobile) {
-        //   width: auto !important;
-        //   max-width: none !important;
-        //   min-height: 100vh;
-        // }
       }
       .arrow {
         @include size(1rem 2.1rem);
@@ -36,8 +29,13 @@
 
         cursor: pointer;
         border-radius: 100%;
+        @include media(max-width 1280px) {
+          top: 12rem;
+        }
+        
         @include media($mobile) {
           @include size(4rem);
+          top: 30rem;
         }
 
         &.arrow-left {
