--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1821,10 +1821,16 @@ body.press .landing {
   cursor: pointer;
   border-radius: 100%;
 }
+@media screen and (max-width: 1280px) {
+  #content.home .landing .img-wrap .arrow {
+    top: 12rem;
+  }
+}
 @media screen and (max-width: 480px) {
   #content.home .landing .img-wrap .arrow {
     height: 4rem;
     width: 4rem;
+    top: 30rem;
   }
 }
 #content.home .landing .img-wrap .arrow.arrow-left {
