--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2827,6 +2827,9 @@ article.press .date {
   min-height: 100vh;
   max-width: 100vw;
   overflow: hidden;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
 }
 #content.contact::after {
   clear: both;
@@ -2837,34 +2840,10 @@ article.press .date {
   display: inline-block;
   margin-top: 12rem;
   background: white;
-  float: none;
   overflow: auto;
   font-size: 1.4rem;
-}
-@media screen and (min-width: 480px) {
-  #content.contact .block {
-    float: left;
-    display: block;
-    margin-right: 2.3576515979%;
-    width: 31.7615656014%;
-    margin-left: 20rem;
-  }
-  #content.contact .block:last-child {
-    margin-right: 0;
-  }
-}
-@media screen and (max-width: 480px) {
-  #content.contact .block {
-    margin-top: 15rem;
-    float: left;
-    display: block;
-    margin-right: 2.3576515979%;
-    width: 82.9403914003%;
-    margin-left: 8.5298042998%;
-  }
-  #content.contact .block:last-child {
-    margin-right: 0;
-  }
+  min-width: 50rem;
+  padding: 0 5rem;
 }
 #content.contact .block h3 {
   font-size: 4.5rem;
@@ -2872,41 +2851,42 @@ article.press .date {
 #content.contact .block > p:first-of-type {
   margin-top: 5rem;
 }
-#content.contact .contact-info {
+#content.contact .block .contact-info {
   color: #293442;
   margin: 5rem 0;
 }
-#content.contact .contact-info a {
+#content.contact .block .contact-info a {
   text-decoration: none;
 }
-#content.contact .contact-info a:hover {
+#content.contact .block .contact-info a:hover {
   text-decoration: underline;
 }
-#content.contact .btn {
+#content.contact .block .btn {
   display: block;
   margin: .5rem 0;
 }
 @media screen and (max-width: 480px) {
-  #content.contact .btn {
+  #content.contact .block .btn {
     margin: 3rem 0;
   }
 }
-#content.contact .phone {
+#content.contact .block .phone {
   margin-top: 5rem;
 }
 @media screen and (max-width: 480px) {
-  #content.contact .phone {
+  #content.contact .block .phone {
     text-decoration: underline;
   }
 }
 #content.contact img {
   display: block;
   float: right;
-  margin-top: 7rem;
-  right: 0;
-  min-width: 0;
-  z-index: -1;
+  position: relative;
+  min-width: none;
+  max-width: none;
   min-height: calc(100vh - 7rem);
+  max-height: 100vh;
+  top: 7rem;
 }
 
 .social-feed .instagram-elt {
