--- a/app/assets/sass/_modules/_header-footer.scss
+++ b/app/assets/sass/_modules/_header-footer.scss
@@ -78,7 +78,7 @@ header {
     @include media(min-width 900px) {
       display: block;
       opacity: 1;
-      top: 0;
+      // top: 0;
     }
   }
   &.mobile {
