--- a/app/assets/sass/_pages/_contact.scss
+++ b/app/assets/sass/_pages/_contact.scss
@@ -1,15 +1,17 @@
 #content.contact {
-  min-height: 100vh;
+  min-height: calc(100vh - 7rem);
   max-width: 100vw;
   @include clearfix;
   overflow: hidden;
 
   display: flex;
   flex-flow: row nowrap;
-  justify-content: flex-start;
+  justify-content: center;
 
   .block {
-    display: inline-block;
+    width: 50%;
+    height: 100%;
+    display: block;
     margin-top: 12rem;
     background: white;
     // float:none;
@@ -17,6 +19,19 @@
     font-size: 1.4rem;
     min-width: 50rem;
     padding: 0 5rem;
+
+    // max-height: 100vh;
+
+    .container {
+      margin-right: 0;
+      max-width: 80%;
+      @include media($mobile) {
+        width: 100%;
+        max-width: 100%;
+        margin-top: 5rem;
+      }
+
+    }
 
     // @include media($desktop) {
     //   @include span-columns(4);
@@ -31,8 +46,9 @@
     h3 {
       font-size: 4.5rem;
     }
-    > p:first-of-type {
+    p:first-of-type {
       margin-top: 5rem;
+      max-width: 50rem;
     }
     .contact-info {
       color: #293442;
@@ -61,13 +77,15 @@
   }
 
   img {
+    width: 50vw;
+    height: 100%;
     display: block;
     float: right;
     position: relative;
-    min-width: none;
-    max-width: none;
-    min-height: calc(100vh - 7rem);
-    max-height: 100vh;
+    min-width: 0;
+    max-width: 50%;
+    // min-height: calc(100vh - 7rem);
+    // max-height: 100vh;
     top: 7rem;
 
     @include media(max-width 900px) {
