--- a/app/assets/sass/_modules/_modal.scss
+++ b/app/assets/sass/_modules/_modal.scss
@@ -14,6 +14,13 @@
     background-color: white;
     box-shadow: 0 5px 6px rgba(0,0,0,0.2);
 
+    .video-modal {
+      @include size(80rem 45rem);
+      iframe {
+        @include size(100%);
+      }
+    }
+
     .closeModal {
       @include size(5rem);
       display: block;
