--- a/app/assets/sass/_pages/_special-offers.scss
+++ b/app/assets/sass/_pages/_special-offers.scss
@@ -38,8 +38,11 @@
       overflow: auto;
       padding: 10rem 0;
       border-bottom: 1px solid rgba(0,0,0,0.1);
-
+      
+      display: block;
+      position: relative;
       overflow: visible;
+      clear: both;
     }
   }
   section.events-retreat {
