--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2401,7 +2401,10 @@ body.press .landing {
   overflow: auto;
   padding: 10rem 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  display: block;
+  position: relative;
   overflow: visible;
+  clear: both;
 }
 #content.special-offers section.events-retreat {
   position: relative;
