adding in new assets for special occasions & photoshoots

--- a/app/assets/sass/_pages/_special-offers.scss
+++ b/app/assets/sass/_pages/_special-offers.scss
@@ -43,6 +43,11 @@
       position: relative;
       overflow: visible;
       clear: both;
+
+      // TODO
+      .three {
+        margin-right: 1.5rem
+      }
     }
   }
   section.events-retreat {
