update grey color

--- a/app/assets/sass/_base/_variables.scss
+++ b/app/assets/sass/_base/_variables.scss
@@ -24,7 +24,7 @@ $large: new-breakpoint(min-width 1200px);
  * Base styles 		~	 	Colours
  */
 $dark: #293443;
-$grey: #c5c6c9;
+$grey: #9e9fa4;
 $golden: #d2bb71;
 $link-color: #293443;
 $hover-color: lighten($link-color, 10);
